# wayland-core

./: .gate.sh  .gitattributes  .gitignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  REBRANDING.md  RELEASING.md  SECURITY.md  deny.toml  justfile  release-please-config.json
crates/genesis-browser/: Cargo.toml  plugin.toml
crates/genesis-browser/src/: lib.rs  plugin.rs
crates/genesis-browser/tests/: plugin_load_test.rs
crates/genesis-cua/: Cargo.toml  plugin.toml
crates/genesis-cua/src/: lib.rs  plugin.rs
crates/genesis-cua/tests/: plugin_load_test.rs
crates/genesis-honcho/: Cargo.toml  plugin.toml
crates/genesis-honcho/src/: api.rs  error.rs  lib.rs  mock.rs  plugin.rs
crates/genesis-honcho/tests/: live_test.rs  mock_test.rs  plugin_registration.rs  representations_test.rs
crates/genesis-ijfw/: Cargo.toml  README.md  plugin.toml
crates/genesis-ijfw/src/: agents.rs  hooks.rs  lib.rs  mcp.rs  plugin.rs  rules.rs  skills.rs  tools.rs
crates/genesis-ijfw/tests/: disable_removes_registrations_test.rs  full_surface_test.rs  p5_denied_test.rs  plugin_load_test.rs  snapshot_loads.rs
crates/genesis-ollama/: Cargo.toml  plugin.toml
crates/genesis-ollama/src/: lib.rs  plugin.rs  provider.rs
crates/genesis-ollama/tests/: ollama_provider_test.rs  plugin_load_test.rs
crates/wcore-acp/: Cargo.toml
crates/wcore-acp/src/: client.rs  error.rs  lib.rs  protocol.rs  roster.rs  router.rs  server.rs  turn.rs
crates/wcore-acp/tests/: approval_gate.rs  rest_roundtrip.rs
crates/wcore-agent/: Cargo.toml
crates/wcore-agent/src/: agents_md.rs  bootstrap.rs  cache_diagnostics.rs  cancel.rs  capability_advisory.rs  channel_dispatch.rs  channel_inbound.rs  channel_media.rs  channel_send_transport.rs  channel_tools.rs  context.rs  cron.rs  engine.rs  file_history.rs  health.rs  host_send_transport.rs  inbound_webhook.rs  lib.rs  project_context.rs  session_state.rs  skill_tool.rs  spawn_tool.rs  spawner.rs  watch.rs  workflow_tool.rs
crates/wcore-agent/tests/: bootstrap_test.rs  browser_e2e_test.rs  capability_advertising_test.rs  channel_tool_posture_test.rs  chatgpt_oauth_e2e.rs  cron_skill_body_scan_test.rs  declarative_plugin_e2e.rs  engine_compact_test.rs  forgeflows_live_relay_test.rs  host_send_delegation.rs  init_history_inject_test.rs  memory_context_integration.rs  ollama_e2e_test.rs  output_compaction_test.rs  plan_persist.rs  plan_prompt_file_test.rs  plugin_api_smoke.rs  plugin_bootstrap_wiring.rs  plugin_capability_verified_test.rs  plugin_end_to_end.rs  plugin_hook_consumer_test.rs  plugin_hybrid_end_to_end.rs  plugin_on_disk_discovery.rs  plugin_tool_delivery.rs  plugin_user_model_consumer.rs  plugin_user_model_delivery.rs  progressive_bootstrap.rs  reasoning_budget_test.rs  runaway_loop_test.rs  skills_e2e.rs  tool_chunk_streaming.rs  tool_guidance_prompt_test.rs  trace_emission_test.rs  turn_trace_shape.rs  w7_pre0_test_driver.rs  w9_direct_invocation_test.rs
crates/wcore-budget/: Cargo.toml
crates/wcore-budget/src/: config.rs
crates/wcore-channel-discord/: Cargo.toml
crates/wcore-channel-discord/src/: config.rs  gateway.rs  lib.rs  rest.rs
crates/wcore-channel-email/: Cargo.toml
crates/wcore-channel-email/src/: config.rs  imap.rs  lib.rs  sent_index.rs  smtp.rs  uid_store.rs
crates/wcore-channel-imessage/: Cargo.toml
crates/wcore-channel-imessage/src/: applescript.rs  channel.rs  db.rs
crates/wcore-channel-matrix/: Cargo.toml
crates/wcore-channel-matrix/src/: config.rs  lib.rs  rest.rs  sync.rs
crates/wcore-channel-msteams/: Cargo.toml
crates/wcore-channel-msteams/src/: auth.rs  error.rs  inbound.rs  lib.rs
crates/wcore-channel-signal/: Cargo.toml
crates/wcore-channel-signal/src/: jsonrpc.rs  lib.rs  subprocess.rs
crates/wcore-channel-telegram/: Cargo.toml
crates/wcore-channel-telegram/src/: api.rs  config.rs  lib.rs  longpoll.rs  offset_store.rs
crates/wcore-channels/: Cargo.toml
crates/wcore-channels/src/: config.rs  event.rs  lib.rs  manager.rs
crates/wcore-cli/: Cargo.toml  build.rs
crates/wcore-cli/data/: registry-default.json
crates/wcore-cli/src/: acp.rs  acp_engine.rs  acp_roster.rs  agent_cmd.rs  anvil.rs  auth.rs  crash_sentinel.rs  cron.rs  crucible.rs  fetch.rs  image.rs  init.rs  init_template.md  lib.rs  main.rs  mcp_serve.rs  policy_gate_adapter.rs  profile.rs  profile_router.rs  provider_keys.rs  self_update.rs  swarm.rs  workflow.rs
crates/wcore-cli/tests/: acp_engine_turn.rs  acp_gate_d012.rs  build_provenance.rs  doctor_smoke.rs  harness_cli_surface.rs  harness_failure_injection.rs  harness_mock_llm.rs  harness_regression.rs  harness_tui_flow.rs  known_lockfile.rs  marketplace_install_e2e.rs  marketplace_overlay_smoke.rs  marketplace_parse.rs  mcp_assistant_scoping_e2e.rs  mcp_serve_smoke.rs  memory_show_test.rs  migrate_hermes.rs  plugin_discovery_e2e.rs  plugin_install_smoke.rs  plugin_resolver.rs  proving_ground.rs  quarantine.rs  registry_inventory_snapshot.rs  release_binary_smoke.rs  skills_audit_cmd.rs  skills_lifecycle_cmd.rs  smoke_p0.rs  yolo_flag_smoke.rs
crates/wcore-config/: Cargo.toml
crates/wcore-config/src/: anvil.rs  compact.rs  compat.rs  config.rs  context_window.rs  credentials.rs  env_file.rs  forge_discovery.rs  hooks.rs  keychain.rs  lib.rs  limits.rs  mcp_cred_refs.rs  plan.rs  plugins_config.rs  profile.rs  shell.rs  tools.rs
crates/wcore-config/tests/: active_pointer_single_reader_test.rs  credential_isolation_test.rs  credential_storage_test.rs  hermeticity_audit_test.rs  model_short_form_test.rs  plan_config_test.rs
crates/wcore-cron/: Cargo.toml
crates/wcore-cron/src/: job.rs  lib.rs  (+1 more)
crates/wcore-cua/: Cargo.toml
crates/wcore-dispatch/: Cargo.toml
crates/wcore-eval-scenarios/: Cargo.toml  README.md
crates/wcore-fixture-harness/: Cargo.toml
crates/wcore-honcho-adapter/: Cargo.toml
crates/wcore-mcp/: Cargo.toml
crates/wcore-memory/: Cargo.toml
crates/wcore-observability/: Cargo.toml
crates/wcore-permissions/: Cargo.toml
genesis/: Cargo.toml  README.md  clippy.toml
(+634 files in other folders)
