[workspace]
resolver = "2"
members = ["crates/genesis-engine", "crates/genesis-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/dmercer290-byte/wayland-core"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
globset = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "process",
    "time",
    "io-util",
] }
toml = "0.8"
walkdir = "2"

[profile.release]
lto = "thin"
strip = true
